2017-08-09  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-752

	* src/m_cloudbox.cc (ScatSpeciesScatAndMetaRead):

	Don't silently ignore exceptions from xml_read_stream (e.g. about wrong
	version of scattering meta data).

	Don't exceed array boundaries if string splitting fails.

2017-08-07  Manfred Brath  <manfred.brath@uni-hamburg.de>

	* arts-2-3-751

	* src/microphysics.{h,cc} (pnd_fieldMY2,psd_MY2), 
	src/m_cloudbox.cc (pnd_fieldCalcFromscat_speciesFields): 
	
	Added new two moment scheme distributions.
	
	* src/m_cloudbox.cc (dNdD_MY2,dNdD_MY2_M),
	src/methods.cc: 	
	
	Added new WSMs for the new distributions.
	
	* src/methods.cc 
	
	added new distributions to pnd_fieldCalcFromscat_speciesFields 

	* src/microphysics.{h,cc} (psd_S2M):
	
	Renamed from WCtopnd_S2M. Corrected upper and lower limit
	behaviour of distribution. Updated documentation
	
	*src/microphysics.cc (pnd_fieldS2M):
	
	Updated documentation.
	
2017-07-13  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-750

	* src/m_disort.cc (DisortCalcWithARTSSurface):

	Fix compilation if Disort is disabled.

2017-07-12 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-749

	Continuation of scatt solver adaptation for use of new-type scat_data

	* src/m_optproperties.cc:
	(opt_prop_sptFromScat_data):
	Separate f-extraction for ext_mat and abs_vec (allowing for different
	f-dimensioning in these. Cosmetics.

	(pha_mat_sptFromScat_data):
	WSM for pha_mat extraction from new-type scat_data. For use in
	pha_mat_spt_agenda or to replace internal use of
	pha_mat_spt_From(Mono)Data).

	(opt_prop_bulkCalc):
	WSM reproducing the standard (and only one applied?) setup for
	opt_prop_part_agenda. Can be used within the agenda or in place of the
	agenda.

	* src/disort.cc (phase_functionCalc, phase_functionCalc2):
	Adapted for use of new-type scat_data, particularly in place of
	scat_data_mono. 

	* controlfiles/artscomponents/disort/TestDISORT.arts: