@@ -1,5 +1,14 @@
 2017-08-09  Oliver Lemke  <olemke@core-dump.info>
 
+	* arts-2-3-753
+
+	* src/m_cloudbox.cc (ScatSpeciesScatAndMetaRead):
+
+	Treat data search path and optional .gz extension properly when looking
+	for file with first naming convention.
+
+2017-08-09  Oliver Lemke  <olemke@core-dump.info>
+
 	* arts-2-3-752
 
 	* src/m_cloudbox.cc (ScatSpeciesScatAndMetaRead):
